# University_projects

./: Defs.h  LinkedList.h  MaxHeap.c  Pokemon.c  Pokemon.h  README.md
C project - Pokemon's/: BattleByCategory.c  LinkedList.c  MainSecond.c  MaxHeap.h  makefile
C++ Project - Animal farms/: Animal.cpp  Animal.h  CMakeLists.txt  Chicken.cpp  Chicken.h  ChickenFarm.cpp  ChickenFarm.h  Cow.cpp  Cow.h  CowFarm.cpp  CowFarm.h  Exceptions.h  Market.cpp  Market.h  Products.h  Sheep.cpp  Sheep.h  SheepFarm.cpp  SheepFarm.h  farm.cpp  farm.h  farmMarket.cpp  makefile
Java Project/: AVL.java  AVLNode.java  HashTable.java  Point.java  StudentSolution.java  test.java
