cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP_Assignment4  Animal.cpp Animal.h Chicken.cpp Chicken.h ChickenFarm.cpp
ChickenFarm.h Cow.h Cow.cpp CowFarm.cpp CowFarm.h farm.cpp farm.h farmMarket.cpp
Market.h Market.cpp Sheep.cpp Sheep.h SheepFarm.h SheepFarm.cpp Exceptions.h Products.h)

